--- a/Yimin_Yang/Offer_13.ipynb
+++ b/Yimin_Yang/Offer_13.ipynb
@@ -74,7 +74,7 @@
         "        for i in range(m):\n",
         "          for j in range(n):\n",
         "            # since coordinate(i, j) will only come from (i, j-1) or (i-1, j)\n",
-        "            if ((i-1, j)) in ans or (i, j-1) in ans and self.sum_num(i) + self.sum_num(j) <= k:\n",
+        "            if ((i-1, j) in ans or (i, j-1)) in ans and self.sum_num(i) + self.sum_num(j) <= k:\n",
         "              ans.add((i, j))\n",
         "        return len(ans)\n",
         "\n",
